--- a/src/app/user/transaction/transaction.component.html
+++ b/src/app/user/transaction/transaction.component.html
@@ -1,21 +1,33 @@
 <app-header></app-header>
 
-<p>
-  Veuillez sélectioner un HarborBond que vous souhaitez transférer:
-</p>
-
-<div class="example-container">
-  <mat-form-field>
-      <mat-select placeholder="Numéro du HarborBond">
-          <mat-option value="option">Harbor1</mat-option>
-          <mat-option value="option">Harbor2</mat-option>
-      </mat-select>
-  </mat-form-field>
-
-  <mat-form-field>
-    <mat-select placeholder="Entreprise">
-      <mat-option value="option">Entreprise1</mat-option>
-      <mat-option value="option">Entreprise2</mat-option>
-    </mat-select>
-  </mat-form-field>
+<div class="transaction-content">
+  <mat-card>
+    <mat-card-content>
+      <form [formGroup]="transactionForm" (ngSubmit)="onSubmit()">
+        <p>Sélectionner un HarborBond à transférer.</p>
+        <mat-form-field>
+          <mat-label>Contrat</mat-label>
+          <mat-select placeholder="Contrat" formControlName="assetName">
+            <mat-option *ngFor="let asset of assets" [value]="asset.name">
+              {{asset.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <p> Ainsi que l'entreprise destinataire:</p>
+        <mat-form-field>
+          <mat-label>Entreprise</mat-label>
+          <mat-select placeholder="Entreprise" formControlName="participantName">
+            <mat-option *ngFor="let participant of participants" [value]="participant.name">
+              {{participant.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <div class="buttonHolder">
+        <button class="blue"
+          type="submit" (click)="openSnackBar('Contrat Transféré', 'Fermer')">
+         Transférer</button>
+         </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
 </div>
