--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,20 @@
 <app-header></app-header>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+<mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title> <h3>Bienvenue sur Gnothi Seauton </h3></mat-card-title>
+      <mat-card-subtitle>Vous êtes connectés en tant qu'administrateur.</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+
+        <mat-nav-list class="list-container">
+            <a mat-list-item routerLinkActive="active" routerLink="/participants">
+                <mat-icon>person</mat-icon>Participants</a>
+            <a mat-list-item routerLinkActive="active" routerLink="/assets">
+                <mat-icon>receipt</mat-icon>Contrats </a>
+            <a mat-list-item routerLinkActive="active" routerLink="/ledger">
+                <mat-icon>https</mat-icon>Historique </a>
+        </mat-nav-list>
+    </mat-card-content>
+  </mat-card>
