--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div class="footer">
-  <p>Copyright &#9400; 2019 - Gnothi Seauton</p>
-  <p>Tous droits réservés.</p>
+  <p>Copyright &#9400; 2019 - Gnothi Seauton <br>
+  Tous droits réservés.</p>
 </div>
 
 <router-outlet></router-outlet>
