--- a/src/app/participant-list/participant-list.component.html
+++ b/src/app/participant-list/participant-list.component.html
@@ -1,22 +1,25 @@
 <app-header></app-header>
 
 <div class="row">
-  <div class="col-xs-12">
-    <h2>Participants de la Blockchain</h2>
-    <div class="list-group">
-      <button
-        class="list-group-item"
-        *ngFor="let participant of participants; let i = index"
-        (click)="onViewParticipant(i)">
-        <h3 class="list-group-item-heading">
-          {{ participant.name }}
-          <button *ngIf="isAdmin" class="btn btn-default pull-right" (click)="onDeleteParticipant(participant)">
-            <span class="glyphicon glyphicon-minus"></span>
+    <div class="col-xs-12">
+      <h2 style="text-align:center;">Entreprises sur la BlockChain.</h2>
+      <mat-grid-list cols="3" rowHeight="100px">
+          <mat-grid-tile
+          *ngFor="let participant of participants; let i = index"
+          (click)="onViewParticipant(i)">
+          <div class="text-tile">
+          <h3 class="list-group-item-heading">
+            {{ participant.name }}
+          </h3>
+          <p style="text-align:center;" class="list-group-item-text"><i>Pays: {{ participant.country }} </i></p>
+          </div>
+          <button style="margin:8px;" *ngIf="isAdmin" class="btn btn-default pull-right" (click)="onDeleteParticipant(participant)">
+              <span class="glyphicon glyphicon-minus"></span>
           </button>
-        </h3>
-        <p class="list-group-item-text">{{ participant.country }}</p>
-      </button>
+        </mat-grid-tile>
+      </mat-grid-list>
+      <div style="text-align:center;">
+      <button style="margin:8px;" *ngIf="isAdmin" class="btn btn-primary" (click)="onNewParticipant()">Ajouter une entreprise</button>
+      </div>
     </div>
-    <button *ngIf="isAdmin" class="btn btn-primary" (click)="onNewParticipant()">Nouveau Participant</button>
   </div>
-</div>
