--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,24 @@
 <app-header></app-header>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<p>
-  user works!
-</p>
+<mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title> <h3>Bienvenue sur Gnothi Seauton </h3></mat-card-title>
+      <mat-card-subtitle>Vous êtes connectés en tant qu'utilisateur.</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+
+        <mat-nav-list class="list-container">
+            <a mat-list-item routerLinkActive="active" routerLink="/participants">
+                <mat-icon>person</mat-icon>Participants</a>
+            <a mat-list-item routerLinkActive="active" routerLink="/assets">
+                <mat-icon>receipt</mat-icon>Contrats </a>
+            <a mat-list-item routerLinkActive="active" routerLink="/transaction">
+              <mat-icon>send</mat-icon>Transactions </a>
+              <a mat-list-item routerLinkActive="active" routerLink="/request">
+                <mat-icon>person_add</mat-icon>Demande d'Ajout </a>
+            <a mat-list-item routerLinkActive="active" routerLink="/ledger">
+                <mat-icon>https</mat-icon>Historique </a>
+        </mat-nav-list>
+    </mat-card-content>
+  </mat-card>
