--- a/src/app/asset-list/asset-list.component.html
+++ b/src/app/asset-list/asset-list.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
+<mat-card>
+<mat-card-content class="asset-list">
 <div class="row">
   <div class="col-xs-12">
     <h2 style="text-align:center;">Listes des Contrats</h2>
@@ -23,3 +25,6 @@
     </div>
   </div>
 </div>
+</mat-card-content>
+</mat-card>
+
