--- a/src/app/participant-list/participant-list.component.html
+++ b/src/app/participant-list/participant-list.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
+<mat-card>
+<mat-card-content class="participant-list">
 <div class="row">
     <div class="col-xs-12">
       <h2 style="text-align:center;">Entreprises sur la BlockChain.</h2>
@@ -23,3 +25,5 @@
       </div>
     </div>
   </div>
+</mat-card-content>
+</mat-card>
