--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -13,9 +13,9 @@
                 <mat-icon>person</mat-icon>Participants</a>
             <a mat-list-item routerLinkActive="active" routerLink="/assets">
                 <mat-icon>receipt</mat-icon>Contrats </a>
-            <a mat-list-item routerLinkActive="active" routerLink="/transaction">
+            <a mat-list-item routerLinkActive="active" routerLink="/user/transaction">
               <mat-icon>send</mat-icon>Transactions </a>
-              <a mat-list-item routerLinkActive="active" routerLink="/request">
+              <a mat-list-item routerLinkActive="active" routerLink="/user/request">
                 <mat-icon>person_add</mat-icon>Demande d'Ajout </a>
             <a mat-list-item routerLinkActive="active" routerLink="/ledger">
                 <mat-icon>https</mat-icon>Historique </a>
